@@ -1,3 +1,9 @@
+2004-07-03  Zoltan Varga  <vargaz@freemail.hu>
+
+       * marshal.c (mono_marshal_get_managed_wrapper): Handle returning
+       delegates from a delegate. Fixes #61033.
+       
+
 2004-06-29  Jackson Harper  <jackson@ximian.com>
 
 	* man/gacutil.1: Update man with new command line options.
